Create header, create navigation and quote block to main

--- a/style/mixins.css
+++ b/style/mixins.css
@@ -1,1 +1,9 @@
-/* No CSS *//*# sourceMappingURL=mixins.css.map */
+/* @mixin content-width-tab{
+    margin: 0 auto;
+    max-width: 1000px;
+} */
+/* @mixin content-width-mobile{
+    margin: 0 auto;
+    max-width: 1000px;
+} */
+/*# sourceMappingURL=mixins.css.map */
