--- a/style/style.scss
+++ b/style/style.scss
@@ -5,274 +5,173 @@
 *{
     margin: 0;
     padding: 0;
-    outline: none;
+    user-select: none; 
+    box-sizing: border-box;
 }
-
-::-webkit-input-placeholder {color:#414141;
-                             font-family: $font-text;
-                             font-weight: 500;
-                            letter-spacing: 1px;}
-::-moz-placeholder          {color:#414141;
-                             font-family: $font-text;
-                             font-weight: 500;
-                            letter-spacing: 1px;}/* Firefox 19+ */
-:-moz-placeholder           {color:#414141;
-                             font-family: $font-text;
-                             font-weight: 500;
-                            letter-spacing: 1px;}/* Firefox 18- */
-:-ms-input-placeholder      {color:#414141;
-                             font-family: $font-text;
-                             font-weight: 500;
-                            letter-spacing: 1px;}
-
-.content-width{
-    width: 1170px;
+a, img {
+    cursor: pointer;
 }
+// all styles
+
 body{
-    .header-wrapper{
-        padding-left: 10px;
-        padding-right: 10px;
-        .header-sup{
-            margin: 35px auto;
-            .header-sup-wrap{
-                margin: 35px auto;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                .header-sup-item{
-                    .input-wrap{
-                        display: flex;
-                        align-items: center;
-                        .zoom-icon{
-                            margin-right: 20px;
-                            opacity: .7;
-                        }
-                        .zoom-icon:hover{
-                            opacity: 1;
-                        }
-                        .input-block{
-                            @include input-style;
-                        }
-                        .input-block:focus{
-                            @include input-style-hover;
-                        }
-                    }
-                    .logfile-icon{
-                        margin-right: 25px;
-                    }
-                    .logfile-icon:last-child{
-                        margin-right: 0;
-                    }
-                    .logo{
-                        width: 140px;
-                    }
-                }
-            }
-        }
-        .separate-underline{
-            width: 100%;
-            border-bottom: 1px solid #f1f1f1;
-        }
-        .header-sub{
-            margin: 35px auto;
-            .nav-wrap{
-                .nav-bar{
-                    display: flex;
-                    justify-content: center;
-                    list-style: none;
-                    .nav-item{
-                        margin-right: 40px;
-                        a{
-                            @include nav-text;
-                            @include hover-animation;
-                        }
-                    }
-                    .nav-item:last-child{
-                        margin-right: none;
-                    }
-                    .nav-item:hover a{
-                        border-bottom: 3px solid #8ed1b7;
-                        color: #8ed1b7;
-                    }
-                }
-            }
-        }
-    }
-    .slider{
-        background: #ade1c5;
-        width: 100%;
-        .slider-wrap{
-            margin: 0 auto;
-            padding-top: 130px;
-            padding-bottom: 30px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            .slider-img{
-                width: 700px;
-            }
-            .slider-control{
-                margin-top: 130px;
-                display: flex;
+    background-color: #373e47;
+    padding: 15px;
+    header{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-radius: 3px;
+        box-shadow: 0px 3px 2px 0 rgba(0, 0, 0, 0.3);
+        background-image: linear-gradient(to top, #e4e4e4, #f2f2f2);
+        padding: 15px 17px;
 
-                .slider-tap{
-                    cursor: pointer;
-                    width: 40px;
-                    height: 5px;
-                    margin: 5px 15px;
-                    background-color: #fff;
-                    border-radius: 10px;
-                    -webkit-border-radius: 10px;
-                    -moz-border-radius: 10px;
-                    -ms-border-radius: 10px;
-                    -o-border-radius: 10px;
-                    @include hover-animation;
-                }
-                .slider-tap:hover{
-                    width: 120px;
-                }
+        @include content-width-desktop;
+        @include font-one;
+
+        .text-logo{
+            text-shadow: 0px 1px 0 #ffffff;
+            font-size: 20px;
+            color: #373e47;
+            .text-style-1 {
+                color: #a45f93;
+            }
+            .text-style-2 {
+                font-size: 18px;
+                color: #8b95a4;
+            }
+        }
+        .head-nav{
+            display: flex;
+            justify-content: center;
+            list-style: none;
+            li{
+                margin-right: 70px;
+                text-shadow: 0px 1px 0 #ffffff;
+                font-size: 14px;
+                color: #143567;
+                @include animation-time;
+            }
+            li:hover{
+                color: #a45f93;
             }
         }
     }
-    .shop-wrapper{
-        .content-wrap{
-            margin: 0 auto;
-            padding: 60px 10px;
-            .shop-nav{
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                border-bottom: 1px solid #f1f1f1;
-                padding-bottom: 25px;
-                margin-bottom: 60px;
-                .nav-filter{
+    main{
+        border: solid 1px #67707d;
+        background-color: #57677f;
+
+        @include content-width-desktop;
+
+        padding: 15px 17px;
+        margin-bottom: 20px;
+        display: flex;
+        .content-column{
+            margin-right: 15px;
+            .content-row{
+                width: 220px;
+                border-radius: 3px;
+                box-shadow: 0px 1px 0 0 rgba(255, 255, 255, 0.3), inset 0px 2px 1px 0 rgba(0, 0, 0, 0.3);
+                background-color: #373e47;
+
+                padding: 10px 12px;
+                margin-bottom: 15px;
+                .main-nav{
                     list-style: none;
-                    display: flex;
-                    .filter-item{
-                        @include nav-text;
-                        cursor: pointer;
-                        margin-right: 30px;
+                    li{
+                        text-shadow: 0px 1px 0 rgba(0, 0, 0, 0.75);
+                        font-size: 13px;
+                        line-height: 1.54;
+                        letter-spacing: normal;
+                        text-align: left;
+                        color: #e4e4e4;
+
+                        @include font-three;
+                        @include animation-time;
+
+                        padding-bottom: 10px;
+                        padding-top: 10px;
+                        border-bottom: 2px solid #4c545e;
                     }
-                    .filter-item:hover{
-                        color: #8ed1b7;
+                    li:first-child{
+                        padding-top: 0px;
+                    }
+                    li:last-child{
+                        padding-bottom: 0;
+                        border-bottom: none;
+                    }
+                    li:hover{
+                        color: #a45f93;
                     }
                 }
-                .input-wrap{
-                    display: flex;
-                    align-items: center;
-                    .zoom-icon{
-                        margin-right: 20px;
-                        opacity: .7;
-                    }
-                    .zoom-icon:hover{
-                        opacity: 1;
-                    }
-                    .input-block{
-                        @include input-style;
-                    }
-                    .input-block:focus{
-                        @include input-style-hover;
-                    }
+                h2{
+                    text-shadow: 0px 1px 0 rgba(0, 0, 0, 0.75);
+                    font-size: 14px;
+                    color: #ffffff;
+
+                    @include font-one;
+
+                    margin-bottom: 20px;
+                }
+                p{
+                    text-shadow: 0px 1px 0 rgba(0, 0, 0, 0.75);
+                    font-size: 12px;
+                    line-height: 1.67;
+                    letter-spacing: normal;
+                    color: #e4e4e4;
+
+                    @include font-three-italic;
+
+                    margin-bottom: 30px;
+                }
+                a{
+                    text-shadow: 0px 1px 0 rgba(0, 0, 0, 0.75);
+                    font-size: 14px;
+                    color: #ff8de3;
+
+                    @include font-one;
                 }
             }
-            .item-wrapper{
-                display: flex;
-                justify-content: space-between;
-                flex-wrap: wrap;
-                .item{
-                    width: 360px;
-                    height: 520px;
-                    margin-bottom: 30px;
-                    box-shadow: 0px 0px 26px -15px rgba(0,0,0,0.57);
-                    @include hover-animation;
-                    
-                    .product-img-wrap{
-                        display: flex;
-                        justify-content: space-between;
-                        margin-bottom: 60px;
-                        .icon-column{
-                            padding-top: 30px;
-                            margin: 0 auto;
-                            display: flex;
-                            flex-direction: column;
-                            align-items: center;
-                            .product-icon{
-                                cursor: pointer;
-                                margin-bottom: 40px;
-                                opacity: .2;
-                                @include hover-animation;
-                            }
-                            .product-icon:hover{
-                                margin-bottom: 40px;
-                                opacity: 1;
-                            }
-                        }
-                        .img-column{
-                            width: 265px;
-                            height: 265px;
-                            background-color: rgb(209, 77, 77);
-                            overflow: hidden;
-                            img{
-                                width: 100%;
-                            }
-                        }
-                    }
-                    .product-description{
-                        display: flex;
-                        flex-direction: column;
-                        align-items: center;
-                        padding: 0 20px 10px 20px;
-                        .product-info{
-                            text-align: center;
-                            .product-name{
-                                font-family: $font-title;
-                                font-size: 24px;
-                                letter-spacing: .5px;
-                                margin-bottom: 25px;
-                            }
-                            .product-price{
-                                font-family: $font-text;
-                                font-size: 15px;
-                                letter-spacing: .5px;
-                                color: #8ed1b7;
-                                margin-bottom: 30px;
-                            }
-                        }
-                        .product-info-underline{
-                            display: block;
-                            content: "";
-                            width: 100%;
-                            height: 1px;
-                            background-color: #eeeeee;
-                            margin-bottom: 30px;
-                        }
-                        .product-buy{
-                            display: flex;
-                            align-items: center;
-                            opacity: .2;
-                            @include hover-animation;
-                            .icon-buy{
-                                margin-right: 20px;
-                            }
-                            .card-text{
-                                cursor: pointer;
-                                border: none;
-                                background: none;
-                                font-family: $font-title;
-                                font-size: 12px;
-                                text-transform: uppercase;
-                                font-weight: 700;
-                            }
-                        }
-                        .product-buy:hover{
-                            opacity: 1;
-                        }
-                    }
+            .content-row:last-child{
+                margin-bottom: 0;
+            }
+            .container-title{
+                .title{
+                    text-shadow: 0px 1px 0 rgba(0, 0, 0, 0.75);
+                    font-size: 18px;
+                    letter-spacing: normal;
+                    color: #ffffff;
+
+                    @include font-one;
                 }
-                .item:hover{
-                    box-shadow: 0px 0px 36px -15px rgba(0,0,0,0.57);
+                .title-text{
+                    text-shadow: 0px 1px 0 rgba(0, 0, 0, 0.75);
+                    font-size: 12px;
+                    color: #e4e4e4;
+                    line-height: 1.5;
+
+                    @include font-three;
+
+                    margin-top: 10px;
                 }
+            }
+            .container-gallery{
+
+            }
+            .container-list{
+
+            }
+            .container-table{
+
+            }
+            .container-forms{
+
             }
         }
+        .content-column:last-child{
+            margin-right: 0;
+        }
+    }
+    footer{
+
     }
 }
