--- a/style/variables.scss
+++ b/style/variables.scss
@@ -1,15 +1,2 @@
 //Font
-$font-title: 'Titillium Web', sans-serif;
-$font-text: 'Roboto', sans-serif;
-$font-footer-line: 'Lato', ;
-
-//Font color
-    //light BG
-    $color-title-on-light: #1d1e24;
-    $color-text-on-light: #7b7c85;
-    //dark BG
-    $color-title-on-dark: #ffffff;
-    $color-text-on-dark: #767676;
-
-//general param
-$content-width: 1170px;
+$font: 'Montserrat Alternates', sans-serif;
