--- a/style/mixins.scss
+++ b/style/mixins.scss
@@ -19,7 +19,33 @@
     font-family: $font;
     font-weight: 700;
 }
-//// animation hover text
+//font main settings
+//Headings
+@mixin font-heading-main{
+    text-shadow: 0px 1px 0 rgba(0, 0, 0, 0.75);
+    font-size: 18px;
+    letter-spacing: normal;
+    color: #ffffff;
+    @include font-one;
+}
+//Subtitles
+@mixin font-subtitle-main{
+    text-shadow: 0px 1px 0 rgba(0, 0, 0, 0.75);
+    font-size: 14px;
+    color: #ffffff;
+    @include font-one;
+}
+//Text
+@mixin font-text-main{
+    text-shadow: 0px 1px 0 rgba(0, 0, 0, 0.75);
+    font-size: 12px;
+    color: #e4e4e4;
+
+    @include font-three;
+
+    margin-top: 10px;
+}
+//// animation hover
 @mixin animation-time{
     transition: .2s;
     transition-delay: .1s;
