--- a/style/style.css
+++ b/style/style.css
@@ -468,4 +468,14 @@ body main .content-column .container-forms .form-btn:hover {
 body main .content-column:last-child {
   margin-right: 0;
 }
+
+body footer .footer-wrap p {
+  text-shadow: 0px 1px 0 rgba(0, 0, 0, 0.75);
+  font-size: 12px;
+  color: #e4e4e4;
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 400;
+  margin-top: 10px;
+  text-align: center;
+}
 /*# sourceMappingURL=style.css.map */
