--- a/style/media.css
+++ b/style/media.css
@@ -1,1 +1,219 @@
-/* No CSS *//*# sourceMappingURL=media.css.map */
+@media only screen and (max-width: 1000px) {
+  body header .head-nav li {
+    margin-right: 40px;
+  }
+  body main .content-column .container-gallery .gallery-wrap .img {
+    width: 150px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  body header .head-nav li {
+    margin-right: 40px;
+  }
+  body main .content-column .container-gallery .gallery-wrap .img {
+    width: 150px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  body header .head-nav li {
+    margin-right: 20px;
+  }
+  body main .content-column .container-gallery .gallery-wrap .img {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  body header {
+    /* display: flex;
+            justify-content: center;
+            align-items: center; */
+  }
+  body header .head-nav {
+    display: none;
+  }
+  body header .btn-menu {
+    display: block;
+  }
+  body main .content-column .container-gallery .gallery-wrap .img {
+    width: 80px;
+    height: 100px;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  body main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  body main .content-column {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-right: 0;
+    margin-bottom: 25px;
+  }
+  body main .content-column .content-row {
+    margin-bottom: 15px;
+  }
+  body main .content-column .container-gallery .gallery-wrap .img {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  body main .content-column .container-gallery .gallery-wrap .img {
+    width: 70px;
+    height: 70px;
+  }
+  body main .content-column .container-list .list-wrap {
+    display: block;
+  }
+  body main .content-column .container-list .list-wrap .list-column {
+    list-style: none;
+    margin-right: 0;
+    margin-top: 7px;
+    margin-bottom: 7px;
+  }
+  body main .content-column .container-list .list-wrap .list-num {
+    margin-right: 0;
+    margin-top: 7px;
+    margin-bottom: 7px;
+  }
+  body main .content-column .container-forms {
+    margin-top: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  body main .content-column .container-forms .text-area {
+    margin-top: 10px;
+  }
+  body main .content-column .container-forms .text-area textarea {
+    width: 200px;
+  }
+}
+
+/* body{
+    header{
+        .head-nav{
+            li{
+            }
+        }
+    }
+    main{
+        .content-column{
+            .content-row{
+                .main-nav{
+                    li{
+                    }
+                    li:first-child{
+                    }
+                    li:last-child{
+                    }
+                    li:hover{
+                    }
+                }
+                .subtitles{
+                }
+                p{
+                }
+                a{
+                }
+            }
+            .content-row:last-child{
+            }
+            .container-title{
+                .title{
+                }
+                .title-text{
+                }
+            }
+            .container-gallery{
+                h2{
+                }
+                .gallery-wrap{
+                    .img{
+                    }
+                    .img:hover{
+                    }
+                    .img:last-child{
+                    }
+                }
+            }
+            .container-list{
+                h2{
+                }
+                .list-wrap{
+                    .list-column{
+                    }
+                    .list-num{
+                    }
+                    .list-heading{  
+                    }
+                    li{
+                    }
+                }
+            }
+            .container-table{
+                h2{
+                }
+                .table-contaier{
+                    tr{
+                        th{  
+                        }
+                        td{
+                        }
+                    }
+                    tr:first-child{ 
+                    }
+
+                }
+            }
+            .container-forms{
+                h2{
+                }
+                .input-wrap{
+                    h5{
+                    }
+                    .input-container{
+                    }
+                }
+                .check-wrap{
+                    p{
+                    }
+                }
+                .text-area{
+                    h4{
+                    }
+                    textarea{
+                }
+                .form-btn{
+                }
+            }
+        }
+        .content-column:last-child{
+        }
+    }
+} */
+/*# sourceMappingURL=media.css.map */
