--- a/style/style.css
+++ b/style/style.css
@@ -445,6 +445,7 @@ body main .content-column .container-forms .text-area textarea {
           box-shadow: inset 0px 2px 3px 0 rgba(0, 0, 0, 0.15);
   border: solid 1px #ffffff;
   background-color: #f0f0f0;
+  padding: 5px;
 }
 
 body main .content-column .container-forms .form-btn {
